fix: hide caption on mobile (430px and below) to reduce header height

--- a/src/components/ConsumptionTable.module.css
+++ b/src/components/ConsumptionTable.module.css
@@ -250,3 +250,9 @@
     width: 100%;
   }
 }
+
+@media (max-width: 430px) {
+  .caption {
+    display: none;
+  }
+}
